--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,18 @@
         @apply bg-background text-foreground;
     }
 }
+
+
+.data-table tbody tr:hover td,
+.data-table tbody tr:hover th {
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity))
+}
+
+.data-table tbody tr:hover td.sticky-col,
+.data-table tbody tr:hover th.sticky-col-header {
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity))
+}
+
+/* .data-table .TableRow[data-state="selected"] {
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity))
+  } */
